syntax = "proto3";

package proto;

import "data-storage/proto/gogo.proto";
import "proto/data.proto";

service DataStorage {
    rpc PushPosts (PushPostsRequest) returns (PushPostsReply) {}
    rpc SelectPosts (SelectPostsRequest) returns (SelectPostsReply) {}

    rpc SelectAggrPosts (SelectAggrPostsRequest) returns (SelectAggrPostsReply) {}

    rpc PushGrid (PushGridRequest) returns (PushGridReply) {}
    rpc PullGrid (PullGridRequest) returns (PullGridReply) {}

    rpc PushEvents (PushEventsRequest) returns (PushEventsReply) {}
    rpc PullEvents (PullEventsRequest) returns (PullEventsReply) {}

    rpc PushLocations (PushLocationsRequest) returns (PushLocationsReply) {}
    rpc PullLocations (PullLocationsRequest) returns (PullLocationsReply) {}
}


// messages for push and select posts
message PushPostsRequest {
    repeated data.Post posts = 1 [(gogoproto.nullable) = false];
}

message PushPostsReply {
    repeated int32 ids = 1;
    string err = 2;
}

message SelectPostsRequest {
    data.SpatioTemporalInterval interval = 1 [(gogoproto.nullable) = false];
}

message SelectPostsReply {
    repeated data.Post posts = 1 [(gogoproto.nullable) = false];
    string err = 2;
}


// messages for select aggr posts
message SelectAggrPostsRequest {
    data.SpatioHourInterval interval = 1 [(gogoproto.nullable) = false];
}

message SelectAggrPostsReply {
    repeated data.AggregatedPost posts = 1 [(gogoproto.nullable) = false];
    string err = 2;
}


// messages for pull and push grids
message PushGridRequest {
    string id = 1;
    bytes blob = 2;
}

message PushGridReply {
    string err = 1;
}

message PullGridRequest {
    string id = 1;
}

message PullGridReply {
    bytes blob = 1;
    string err = 2;
}


// messages gor pull and push events
message PushEventsRequest {
    repeated data.Event events = 1 [(gogoproto.nullable) = false];
}

message PushEventsReply {
    string err = 1;
}

message PullEventsRequest {
    data.SpatioHourInterval interval = 1 [(gogoproto.nullable) = false];
}

message PullEventsReply {
    repeated data.Event events = 1 [(gogoproto.nullable) = false];
    string err = 2;
}


// messages for pull and push locations
message PushLocationsRequest {
    data.City city = 1 [(gogoproto.nullable) = false];
    repeated data.Location locations = 2 [(gogoproto.nullable) = false];
}

message PushLocationsReply {
    string err = 1;
}

message PullLocationsRequest {
    string cityId = 1;
}

message PullLocationsReply {
    repeated data.Location locations = 1 [(gogoproto.nullable) = false];
    string err = 2;
}

